some change html

--- a/presalesite/other/templates/other/other_list.html
+++ b/presalesite/other/templates/other/other_list.html
@@ -5,7 +5,7 @@
       <form method="POST" onsubmit="return validateForm();">
         {% csrf_token %}
 
-        <details>
+        <details style="margin-top:25px;">
             <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
             >Необходимо указать общую стоимость расходных материалов (комплект болт-шайба/кабельные стяжки/лента-липучка/труба гофрированная/витая пара/медные патчкорды/оптические патчкорды) руб. 
             </summary>
