--- a/presalesite/templates/base.html
+++ b/presalesite/templates/base.html
@@ -51,6 +51,9 @@
 					<a class="nav-item nav-link" title="Подрядчик" href="{% url 'Subcontractor' %}">Subcontractor</a>
 				  </li>
 				  <li class="nav-item">
+					<a class="nav-item nav-link" title="Подрядчик" href="{% url 'Subcontractor_new' %}">Subcontractor_new</a>
+				  </li>
+				  <li class="nav-item">
 					<a class="nav-item nav-link" title="Расходники" href="{% url 'Other' %}">Other</a>
 				  </li>
 				  <li class="nav-item">
