--- a/presalesite/subcontractor_new/templates/subcontractor_new/subcontractor_new_confirm_delete.html
+++ b/presalesite/subcontractor_new/templates/subcontractor_new/subcontractor_new_confirm_delete.html
@@ -2,12 +2,21 @@
 
 {% block content %}
 
-<ul class="list-group">
-    Вы действительно хотите удалить {{object.name}}?
-    <form method="POST">
-      {% csrf_token %}
-      <button class="btn btn-danger">Да</button>
-    </form>
-</ul>
+<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh;">
+  <ul class="list-group">
+    <li class="list-group-item">
+      Вы действительно хотите удалить {{object.subcontract_name}}?
+    </li>
+    <li class="list-group-item">
+      <form method="POST">
+        {% csrf_token %}
+        <div style="display: flex; justify-content: center;">
+          <button class="btn btn-danger" type="submit">Да</button>
+          <a style="margin-left:20px;" class="btn btn-secondary" href="{% url 'Subcontractor_new' %}">Нет</a>
+        </div>
+      </form>
+    </li>
+  </ul>
+</div>
 
 {% endblock %}
