--- a/presalesite/subcontractor_new/templates/subcontractor_new/subcontractor_new_list.html
+++ b/presalesite/subcontractor_new/templates/subcontractor_new/subcontractor_new_list.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 
-<table id="finalTable" style="border-collapse: collapse; margin-left:20px; margin-right:20px;">
+<table id="finalTable" style="border-collapse: collapse; margin-left:20px; margin-right:20px; margin-top:25px;">
     <thead>
       <tr>
-        <th style="border: 1px solid black; text-align: center; width: 30%;">Наименование подрядчика</th>
-        <th style="border: 1px solid black; text-align: center; width: 30%;">Наименование работ</th>
-        <th style="border: 1px solid black; text-align: center; width: 30%;">Сумма с НДС, руб</th>
+        <th style="border: 1px solid black; text-align: center; width: 30%; background-color: rgb(228, 228, 221)"">Наименование подрядчика</th>
+        <th style="border: 1px solid black; text-align: center; width: 30%; background-color: rgb(228, 228, 221);"">Наименование работ</th>
+        <th style="border: 1px solid black; text-align: center; width: 30%; background-color: rgb(228, 228, 221);"">Сумма с НДС, руб</th>
       </tr>
     </thead>
     <tbody>
@@ -17,17 +17,17 @@
             <td style="border: 1px solid black; text-align: center;">{{item.subcontract_jobs}}</td>
             <td style="border: 1px solid black; text-align: center;">{{item.subcontract_price}}</td>
             <td>
-                <a class="btn btn-warning" href="{% url 'update_subcontractor' item.id %}">редактировать</a>
+                <a style="margin-left:20px;" class="btn btn-warning" href="{% url 'update_subcontractor' item.id %}">редактировать</a>
             </td>
             <td>
-                <a class="btn btn-danger" href="{% url 'delete_subcontractor' item.id %}">удалить</a>
+                <a style="margin-left:20px;" class="btn btn-danger" href="{% url 'delete_subcontractor' item.id %}">удалить</a>
             </td>
         </tr>
     {% endfor %}
     </tbody>
   </table>
 
-<a class="btn btn-primary" href="{% url 'create_subcontractor' %}">Добавить подрядчика</a>
+<a style="margin-left:20px; margin-top:20px;" class="btn btn-primary" href="{% url 'create_subcontractor' %}">Добавить подрядчика</a>
 
 
 {% endblock %}
