migrate from subcontractor_new to subcontractor

--- a/presalesite/subcontractor/templates/subcontractor/subcontractor_confirm_delete.html
+++ b/presalesite/subcontractor/templates/subcontractor/subcontractor_confirm_delete.html
@@ -12,7 +12,7 @@
         {% csrf_token %}
         <div style="display: flex; justify-content: center;">
           <button class="btn btn-danger" type="submit">Да</button>
-          <a style="margin-left:20px;" class="btn btn-secondary" href="{% url 'Subcontractor_new' %}">Нет</a>
+          <a style="margin-left:20px;" class="btn btn-secondary" href="{% url 'Subcontractor' %}">Нет</a>
         </div>
       </form>
     </li>
