--- a/presalesite/subcontractor/templates/subcontractor/subcontractor_list.html
+++ b/presalesite/subcontractor/templates/subcontractor/subcontractor_list.html
@@ -1,39 +1,38 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
-	  {% block content %}
+{% block content %}
 
-      <form method="POST" onsubmit="return validateForm();">
-        {% csrf_token %}
+<table id="finalTable" style="border-collapse: collapse; margin-left:20px; margin-right:20px; margin-top:25px;">
+    <thead>
+      <tr>
+        <th style="border: 1px solid black; text-align: center; width: 30%; background-color: rgb(228, 228, 221)"">Наименование подрядчика</th>
+        <th style="border: 1px solid black; text-align: center; width: 30%; background-color: rgb(228, 228, 221);"">Наименование работ</th>
+        <th style="border: 1px solid black; text-align: center; width: 30%; background-color: rgb(228, 228, 221);"">Сумма с НДС, руб</th>
+      </tr>
+    </thead>
+    <tbody>
+        {% for item in object_list %}
+        <tr>
+            <td style="border: 1px solid black; text-align: center;">{{item.subcontract_name}}</td>
+            <td style="border: 1px solid black; text-align: center;">{{item.subcontract_jobs}}</td>
+            <td style="border: 1px solid black; text-align: center;">{{item.subcontract_price}}</td>
+            <td>
+                <a style="margin-left:20px;" class="btn btn-warning" href="{% url 'update_subcontractor' item.id %}">редактировать</a>
+            </td>
+            <td>
+                <a style="margin-left:20px;" class="btn btn-danger" href="{% url 'delete_subcontractor' item.id %}">удалить</a>
+            </td>
+        </tr>
+    {% endfor %}
+    </tbody>
+  </table>
 
-        <details style="margin-top:25px;">
-            <summary style="margin-left:10px; font-weight:900; cursor: pointer;"
-            >Необходимо указать наименование подрядичка, работы проводимые подрядчиком и стоимость работ: 
-            </summary>
-        <ul>
-          <li>
-            <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">  
-              <input style="width: 218px; text-align: left;" type="text" id="Наименование подрядчика" name="Наименование подрядчика" placeholder="Наименование подрядчика" required value="{{ subcontractor_name.0.subcontract_name }}"/>
-            </summary>
-          </li>
-          <li>
-            <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">  
-              <input style="width: 218px; text-align: left;" type="text" id="Наименование работ" name="Наименование работ" placeholder="Наименование работ" required value="{{ subcontractor_jobs.0.subcontract_jobs }}"/>
-            </summary>
-          </li>
-          <li>
-            <summary style="margin-left:60px; font-weight:normal; cursor: pointer;">  
-              <input style="width: 218px; text-align: left;" type="number" id="Стоимость" name="Стоимость" placeholder="Стоимость с НДС, руб" required value="{{ subcontractor_price.0.subcontract_price }}"/>
-            </summary>
-          </li>
-        </ul>
+<a style="margin-left:20px; margin-top:20px;" class="btn btn-primary" href="{% url 'create_subcontractor' %}">Добавить подрядчика</a>
 
 
-  
-	  <input type="hidden" id="checked-items" name="checked_items">
-	  <button style="margin-left:50px;" type="submit" class="btn btn-primary">Добавить в Расчет</button>
-		<a style="margin-left:20px;" class="btn btn-danger" href='delete'>Очистить</a>
-	</form>
+{% endblock %}
 
-</details>
 
-	  {% endblock %}
+
+
+
