correct design_list

--- a/presalesite/design/templates/design/design_list.html
+++ b/presalesite/design/templates/design/design_list.html
@@ -79,18 +79,18 @@
                 </summary>
 
                 <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 34) Физическая схема организации связи (L1)" value="(ГОСТ 34) Физическая схема организации связи (L1)" {% if '(ГОСТ 34) Физическая схема организации связи (L1)' in names %} checked {% endif %}>
-                  Физическая схема организации связи (L1)
+                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 34) Cхема организации связи (L1)" value="(ГОСТ 34) Cхема организации связи (L1)" {% if '(ГОСТ 34) Cхема организации связи (L1)' in names %} checked {% endif %}>
+                  Cхема организации связи (L1)
                 </summary>
 
                 <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 34) Физическая схема организации связи (L2)" value="(ГОСТ 34) Физическая схема организации связи (L2)" {% if '(ГОСТ 34) Физическая схема организации связи (L2)' in names %} checked {% endif %}>
-                  Физическая схема организации связи (L2)
+                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 34) Cхема организации связи (L2)" value="(ГОСТ 34) Cхема организации связи (L2)" {% if '(ГОСТ 34) Cхема организации связи (L2)' in names %} checked {% endif %}>
+                  Cхема организации связи (L2)
                 </summary>
 
                 <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 34) Физическая схема организации связи (L3)" value="(ГОСТ 34) Физическая схема организации связи (L3)" {% if '(ГОСТ 34) Физическая схема организации связи (L3)' in names %} checked {% endif %}>
-                  Физическая схема организации связи (L3)
+                  <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 34) Cхема организации связи (L3)" value="(ГОСТ 34) Cхема организации связи (L3)" {% if '(ГОСТ 34) Cхема организации связи (L3)' in names %} checked {% endif %}>
+                  Cхема организации связи (L3)
                 </summary>
 
                 <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
@@ -223,18 +223,18 @@
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Физическая схема организации связи (L1)" value="(ГОСТ 21) Физическая схема организации связи (L1)" {% if '(ГОСТ 21) Физическая схема организации связи (L1)' in names %} checked {% endif %}>
-                Физическая схема организации связи (L1)
+                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Cхема организации связи (L1)" value="(ГОСТ 21) Cхема организации связи (L1)" {% if '(ГОСТ 21) Cхема организации связи (L1)' in names %} checked {% endif %}>
+                Cхема организации связи (L1)
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Физическая схема организации связи (L2)" value="(ГОСТ 21) Физическая схема организации связи (L2)" {% if '(ГОСТ 21) Физическая схема организации связи (L2)' in names %} checked {% endif %}>
-                Физическая схема организации связи (L2)
+                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Cхема организации связи (L2)" value="(ГОСТ 21) Cхема организации связи (L2)" {% if '(ГОСТ 21) Cхема организации связи (L2)' in names %} checked {% endif %}>
+                Cхема организации связи (L2)
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Физическая схема организации связи (L3)" value="(ГОСТ 21) Физическая схема организации связи (L3)" {% if '(ГОСТ 21) Физическая схема организации связи (L3)' in names %} checked {% endif %}> 
-                Физическая схема организации связи (L3)
+                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Cхема организации связи (L3)" value="(ГОСТ 21) Cхема организации связи (L3)" {% if '(ГОСТ 21) Cхема организации связи (L3)' in names %} checked {% endif %}> 
+                Cхема организации связи (L3)
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
@@ -286,18 +286,18 @@
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Физическая схема организации связи (L1)" value="(ГОСТ 21) Физическая схема организации связи (L1)" {% if '(ГОСТ 21) Физическая схема организации связи (L1)' in names %} checked {% endif %}>
-                Физическая схема организации связи (L1)
+                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Cхема организации связи (L1)" value="(ГОСТ 21) Cхема организации связи (L1)" {% if '(ГОСТ 21) Cхема организации связи (L1)' in names %} checked {% endif %}>
+                Cхема организации связи (L1)
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Физическая схема организации связи (L2)" value="(ГОСТ 21) Физическая схема организации связи (L2)" {% if '(ГОСТ 21) Физическая схема организации связи (L2)' in names %} checked {% endif %}>
-                Физическая схема организации связи (L2)
+                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Cхема организации связи (L2)" value="(ГОСТ 21) Cхема организации связи (L2)" {% if '(ГОСТ 21) Cхема организации связи (L2)' in names %} checked {% endif %}>
+                Cхема организации связи (L2)
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Физическая схема организации связи (L3)" value="(ГОСТ 21) Физическая схема организации связи (L3)" {% if '(ГОСТ 21) Физическая схема организации связи (L3)' in names %} checked {% endif %}>
-                Физическая схема организации связи (L3)
+                <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(ГОСТ 21) Cхема организации связи (L3)" value="(ГОСТ 21) Cхема организации связи (L3)" {% if '(ГОСТ 21) Cхема организации связи (L3)' in names %} checked {% endif %}>
+                Cхема организации связи (L3)
               </summary>
 
               <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
@@ -383,18 +383,18 @@
             </summary>
 
             <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(Сокращенная версия) Физическая схема организации связи (L1)" value="(Сокращенная версия) Физическая схема организации связи (L1)" {% if '(Сокращенная версия) Физическая схема организации связи (L1)' in names %} checked {% endif %}>
-              Физическая схема организации связи (L1)
+              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(Сокращенная версия) Cхема организации связи (L1)" value="(Сокращенная версия) Cхема организации связи (L1)" {% if '(Сокращенная версия) Cхема организации связи (L1)' in names %} checked {% endif %}>
+              Cхема организации связи (L1)
             </summary>
 
             <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(Сокращенная версия) Физическая схема организации связи (L2)" value="(Сокращенная версия) Физическая схема организации связи (L2)" {% if '(Сокращенная версия) Физическая схема организации связи (L2)' in names %} checked {% endif %}>
-              Физическая схема организации связи (L2)
+              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(Сокращенная версия) Cхема организации связи (L2)" value="(Сокращенная версия) Cхема организации связи (L2)" {% if '(Сокращенная версия) Cхема организации связи (L2)' in names %} checked {% endif %}>
+              Cхема организации связи (L2)
             </summary>
 
             <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
-              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(Сокращенная версия) Физическая схема организации связи (L3)" value="(Сокращенная версия) Физическая схема организации связи (L3)" {% if '(Сокращенная версия) Физическая схема организации связи (L3)' in names %} checked {% endif %}>
-              Физическая схема организации связи (L3)
+              <input type="checkbox" style="margin-right:20px;" class="list-item-checkbox" name="(Сокращенная версия) Cхема организации связи (L3)" value="(Сокращенная версия) Cхема организации связи (L3)" {% if '(Сокращенная версия) Cхема организации связи (L3)' in names %} checked {% endif %}>
+              Cхема организации связи (L3)
             </summary>
 
             <summary style="margin-left:120px; font-weight:normal; cursor: pointer;">
